# rinha-with-rust-extreme-2026

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.local  Makefile  README.md  build.rs  docker-compose.local.uncapped.yml  docker-compose.local.yml  docker-compose.profile.yml  docker-compose.yml  info.json  nginx.conf
scripts/: load-test.js  run-example-payloads.py  run-example-payloads.sh
scripts/results/: 2026-04-24T11-54-05_v0.1.1.json  2026-04-24T11-59-28_v0.1.1.json  2026-04-24T12-07-50_v0.1.1_200vus_60s.json  2026-04-24T12-08-56_v0.1.1-exp1.json  2026-04-24T21-14-17_v0.1.2_200vus_60s.json  2026-04-24T21-39-40_v0.1.2_200vus_60s.json  2026-04-25T16-15-24_v0.4.1_200vus_60s.json  2026-04-25T16-18-19_v0.4.1_200vus_60s.json  2026-04-25T16-18-49_v0.4.1_200vus_60s.json  2026-04-27T22-29-48_v0.6.0_200vus_60s.json  2026-04-28T00-04-52_debug_200vus_60s.json  2026-04-28T00-08-25_debug_200vus_60s.json  2026-04-28T00-10-04_debug_200vus_60s.json  2026-04-28T00-13-35_debug_200vus_60s.json  2026-04-28T13-19-28_v0.6.2_200vus_60s.json  2026-04-28T13-52-11_v0.7.0_200vus_60s.json  2026-04-28T15-04-55_v0.7.0_200vus_60s.json  2026-04-29T14-10-04_v0.7.4_200vus_60s.json  2026-05-02T18-28-19_v0.8.0_200vus_60s.json  2026-05-04T22-08-09_v0.8.3_200vus_60s.json
src/: handler.rs  index.rs  main.rs  packed_ref.rs  simd.rs  types.rs  vectorizer.rs
