[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

[features]
ivf = []
profiling = ["dep:pprof"]

[dependencies]
axum       = "0.8"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", default-features = false, features = ["std", "serde"] }
pprof      = { version = "0.14", features = ["flamegraph", "protobuf-codec"], optional = true }

[build-dependencies]
flate2     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Build scripts (build.rs) run unoptimized by default. K-means on 3M
# vectors is ~1000x slower without optimization. These overrides ensure
# build.rs runs at opt-level 3 in both dev and release builds.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.profiling]
inherits      = "release"
debug         = true
strip         = false
